--- a/src/app/components/taken-cars/taken-cars.component.scss
+++ b/src/app/components/taken-cars/taken-cars.component.scss
@@ -1,41 +1,79 @@
-.ticket {
-    border: 2px solid #ccc;
-    border-radius: 8px;
-    margin-bottom: 10px;
-    padding: 10px;
-    background-color: #f9f9f9;
-    display: flex;
-  }
-  
-  .ticket-header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
-  
-  .car-id {
-    font-weight: bold;
-  }
-  
-  .brand-model {
-    font-style: italic;
-  }
-  
-  .ticket-body {
-    margin-top: 10px;
-  }
-  
-  .city {
-    font-weight: bold;
-  }
-  
-  .multiplier,
-  .price-paid {
-    margin-top: 5px;
-  }
+@import url('https://fonts.googleapis.com/css2?family=Fira+Code&family=Plus+Jakarta+Sans:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
 
-  .wrapper{
+body {
+    background-color: #f6f7f9;
+    font-family: 'Plus Jakarta Sans';
+}
+
+.rented_car {
+    padding: 5px;
+    box-shadow: 1px 1px 5px rgba(128, 128, 128, 0.261);
+    background-color: white;
+    width: 300px;
     display: flex;
-    gap: 25px;
-    flex-wrap: wrap;
-  }
+    border-radius: 15px;
+    height: 200px;
+    .text_content {
+        width: 100%;
+        padding: 10px;
+        .main_info {
+            align-items: center;
+            display: flex;
+            justify-content: space-between;
+            h1 {
+                margin: 0;
+                color: #1a202c;
+                font-size: 24px;
+                font-weight: bold;
+            }
+            p {
+                margin: 0;
+                font-size: 15px;
+                color: #90a3bf;
+                font-weight: 500;
+                background: #e6e8ec;
+                margin: 5px 0px;
+                padding: 3px 8px;
+                display: inline-block;
+                border-radius: 5px;
+            }
+        }
+
+        .rental_details {
+            margin-top: 10px;
+            width: 100%;
+            .detail {
+                margin: 5px 0;
+                width: 100%;
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+                p:first-child {
+                    font-size: 17px;
+                    color: #90a3bf;
+                    margin-bottom: 0;
+                }
+                p:nth-child(2) {
+                    margin-bottom: 0;
+                    font-size: 17px;
+                    font-weight: bold;
+                    color: #1a202c;
+                }
+            }
+        }
+    }
+}
+
+
+.wrapper{
+  display: flex;
+  flex-direction: row-reverse;
+  flex-wrap: wrap;
+  gap: 25px;
+}
+
+.detail_city{
+  width: 100%;
+  display: flex;
+  margin: 0;
+}
