--- a/src/app/components/thankyou-renting/thankyou-renting.component.html
+++ b/src/app/components/thankyou-renting/thankyou-renting.component.html
@@ -1,6 +1,12 @@
-
-<div class="container">
-    <h1>თქვენ წარმატებულად იქირავეთ მანქანა</h1>
-
-    <h3>გმადლობთ რომ გვენდობით</h3>
+<div class="d-flex justify-content-center align-items-center flex-column thank_you">
+    <i class="bi bi-envelope"></i>
+    <h1>გმადლობთ რომ გვენდობით</h1>
+    <h3>თქვენ წარმატებით იქირავეთ მანქანა</h3>
+    <p>შეამოწმეთ თქვენი ელ. ფოსტა</p>
 </div>
+
+
+
+<!-- Again bad Practice -->
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
