Added Some New Decoration Images

--- a/src/app/components/registered-succesfuly/registered-succesfuly.component.html
+++ b/src/app/components/registered-succesfuly/registered-succesfuly.component.html
@@ -1,5 +1,5 @@
 <div class="d-flex justify-content-center align-items-center flex-column thank_you">
-    <i class="bi bi-envelope"></i>
+    <img src="../../../assets/Undraw_mail.svg" width="300px" alt="">
     <h1>თქვენ წარმატებით გაიარეთ რეგისტრაცია</h1>
     <p>შეამოწმეთ თქვენი ელ. ფოსტა</p>
 </div>
