--- a/src/app/components/thankyou-renting/thankyou-renting.component.html
+++ b/src/app/components/thankyou-renting/thankyou-renting.component.html
@@ -1,5 +1,5 @@
 <div class="d-flex justify-content-center align-items-center flex-column thank_you">
-    <i class="bi bi-envelope"></i>
+    <img src="../../../assets/undraw_order_a_car_-3-tww.svg" width="300px" alt="">
     <h1>გმადლობთ რომ გვენდობით</h1>
     <h3>თქვენ წარმატებით იქირავეთ მანქანა</h3>
     <p>შეამოწმეთ თქვენი ელ. ფოსტა</p>
