--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,6 +1,10 @@
-<div class="container">
-  <div class="row">
-    <div class="col">
+<div class="wrapper">
+  <div class="container">
+    <div class="row">
+      <img src="../../../assets/undraw_login_re_4vu2.svg" alt="" />
+    </div>
+
+    <div class="row login_side">
       <form (submit)="onSubmit()" class="needs-validation" novalidate>
         <div class="col-sm">
           <div class="form-floating mb-3">
