Recentered The Location On The Map Now its in Center Of map

--- a/src/app/components/car-rent-detail/car-rent-detail.component.scss
+++ b/src/app/components/car-rent-detail/car-rent-detail.component.scss
@@ -188,3 +188,9 @@ mgl-map {
     margin-left: 170px;
   }
 }
+
+.map_container{
+  width: 900px !important;
+  height: 100px !important;
+  border-radius: 22px;
+}
