--- a/src/app/components/car-rent-detail/car-rent-detail.component.html
+++ b/src/app/components/car-rent-detail/car-rent-detail.component.html
@@ -25,7 +25,7 @@
           <p>საწვავი ავზის მოცულობა <span>{{car?.fuelCapacity}} ლიტრი</span></p>
           <p>ტრანსმისია <span>{{car?.transmission}}</span></p>
           <p>ტევადობა <span>{{car?.capacity}} კაცი</span></p>
-  
+
           <div class="calc">
             <label for="multiplier">რამდენი დღით გსურთ შეძენა?</label>
             <div class="slider">
@@ -37,19 +37,22 @@
             </div>
             <div class="ifcar" *ngIf="!car">
               სულ გადასახდელი: 0
-            </div>         </div> 
-          
+            </div>         </div>
+
           <div class="bottom d-flex">
               <p>ფასი: <span>{{car?.price}}₾</span></p>
               <button class="buy_button" (click)="BuyCar(PhoneNumber, car?.id ?? 0, multiplier)">ყიდვა</button>
           </div>
-  
+
       </div>
     </div>
   </div>
 </div>
 
+<div class="map_container">
+  <app-map></app-map>
 
+</div>
 <!-- This Is Bad Practice -->
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
