--- a/src/app/components/car-rent-detail/car-rent-detail.component.scss
+++ b/src/app/components/car-rent-detail/car-rent-detail.component.scss
@@ -194,3 +194,10 @@ mgl-map {
   height: 100px !important;
   border-radius: 22px;
 }
+
+.wrapper{
+  width: 100%;
+  align-items: center;
+  justify-content: center;
+  display: flex;
+}
