--- a/src/app/components/car-rent-detail/car-rent-detail.component.html
+++ b/src/app/components/car-rent-detail/car-rent-detail.component.html
@@ -2,57 +2,62 @@
   <div class="content_box row">
     <div class="left_Image_side col-lg-6">
       <div class="image_box container">
-          <div class="row">
-              <img class="main_image col-12"  src="{{car?.imageUrl1}}" alt="" />
+        <div class="row">
+          <img class="main_image col-12" src="{{car?.imageUrl1}}" alt="" />
 
-              <div class="small_images container">
-                  <div class="row">
-                      <img class="small_image col-6" src="{{car?.imageUrl2}}" alt="" />
-                      <img  class="small_image col-6" src="{{car?.imageUrl3}}" alt="" />
-                  </div>
-              </div>
+          <div class="small_images container">
+            <div class="row">
+              <img class="small_image col-6" src="{{car?.imageUrl2}}" alt="" />
+              <img class="small_image col-6" src="{{car?.imageUrl3}}" alt="" />
+            </div>
           </div>
+        </div>
       </div>
     </div>
 
     <div class="right_info_side col-lg-6">
       <div class="content">
-          <div class="car_brand d-flex">
-              <p>{{car?.brand}}</p>
-          </div>
-          <h1>{{car?.model}}</h1>
-          <p>გამოშვების წელი <span>{{car?.year}}</span></p>
-          <p>საწვავი ავზის მოცულობა <span>{{car?.fuelCapacity}} ლიტრი</span></p>
-          <p>ტრანსმისია <span>{{car?.transmission}}</span></p>
-          <p>ტევადობა <span>{{car?.capacity}} კაცი</span></p>
+        <div class="car_brand d-flex">
+          <p>{{car?.brand}}</p>
+        </div>
+        <h1>{{car?.model}}</h1>
+        <p>გამოშვების წელი <span>{{car?.year}}</span></p>
+        <p>საწვავი ავზის მოცულობა <span>{{car?.fuelCapacity}} ლიტრი</span></p>
+        <p>ტრანსმისია <span>{{car?.transmission}}</span></p>
+        <p>ტევადობა <span>{{car?.capacity}} კაცი</span></p>
 
-          <div class="calc">
-            <label for="multiplier">რამდენი დღით გსურთ შეძენა?</label>
-            <div class="slider">
-              <input type="range" id="multiplier" [(ngModel)]="multiplier" min="1" max="30" step="1">
-              <span>{{ multiplier }} დღე</span>
-            </div>
-            <div class="ifcar" *ngIf="car">
-              სულ გადასახდელი {{ multiplier * car.price }} ₾
-            </div>
-            <div class="ifcar" *ngIf="!car">
-              სულ გადასახდელი: 0
-            </div>         </div>
-
-          <div class="bottom d-flex">
-              <p>ფასი: <span>{{car?.price}}₾</span></p>
-              <button class="buy_button" (click)="BuyCar(PhoneNumber, car?.id ?? 0, multiplier)">ყიდვა</button>
+        <div class="calc">
+          <label for="multiplier">რამდენი დღით გსურთ შეძენა?</label>
+          <div class="slider">
+            <input type="range" id="multiplier" [(ngModel)]="multiplier" min="1" max="30" step="1">
+            <span>{{ multiplier }} დღე</span>
           </div>
+          <div class="ifcar" *ngIf="car">
+            სულ გადასახდელი {{ multiplier * car.price }} ₾
+          </div>
+          <div class="ifcar" *ngIf="!car">
+            სულ გადასახდელი: 0
+          </div>
+        </div>
+
+        <div class="bottom d-flex">
+          <p>ფასი: <span>{{car?.price}}₾</span></p>
+          <button class="buy_button" (click)="BuyCar(PhoneNumber, car?.id ?? 0, multiplier)">ყიდვა</button>
+        </div>
 
       </div>
     </div>
   </div>
 </div>
 
-<div class="map_container">
-  <app-map></app-map>
+<div class="wrapper">
+  <div class="map_container">
+    <app-map></app-map>
 
+  </div>
 </div>
+
 <!-- This Is Bad Practice -->
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css"
+  integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
