--- a/src/app/components/map/map.component.scss
+++ b/src/app/components/map/map.component.scss
@@ -1,4 +1,16 @@
 mgl-map{
   width: 100%;
-  height: 300px;
+  height: 700px;
 }
+
+.wrapper {
+  position: relative;
+}
+
+app-map-info-box {
+  position: absolute;
+  top: -100px;
+  left: 0;
+  z-index: 1;
+}
+
