--- a/src/app/components/popular-cars/popular-cars.component.html
+++ b/src/app/components/popular-cars/popular-cars.component.html
@@ -7,11 +7,14 @@
     <div class="outter_box">
         <div class="header_box">
             <h1 class="popular_cars">პოპულარული მანქანები</h1>
-    
+
         </div>
-    
+
         <div class="cards_box">
             <app-cars-card *ngFor="let car of cars" [car]="car"></app-cars-card>
         </div>
+
+        <ngx-skeleton-loader *ngIf="cars.length < 1" count="5" [theme]="{height: '350px', width:'270px', margin:'25px', background: 'grey', opacity:'0.6'}"></ngx-skeleton-loader>
+
     </div>
 </div>
