--- a/src/app/components/filtered/filtered.component.scss
+++ b/src/app/components/filtered/filtered.component.scss
@@ -26,15 +26,13 @@
   margin-top: 20px;
 }
 
-.pagination button {
-  margin: 0 5px;
-  padding: 5px 10px;
-  border: none;
-  background-color: #e0e0e0;
-  color: #333;
-  font-size: 14px;
-  cursor: pointer;
-  transition: background-color 0.3s;
+.pagination{
+  button{
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    margin: 0 5px;
+  }
 }
 
 .pagination button:hover {
@@ -44,5 +42,11 @@
 .pagination button:disabled {
   opacity: 0.6;
   cursor: not-allowed;
+  border: 1px solid #3563E9;
 }
 
+.flexer{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
